advanced/deploy-with-aws-secrets/k8s/jenkins.yaml
# auth
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: NAMESPACE
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: HOSTNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins-svc
            port:
              number: 8080
  ingressClassName: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
  namespace: NAMESPACE
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 50000
      targetPort: 50000
      name: agent
  selector:
    name: jenkins
# creating jenkins master
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins
  namespace: NAMESPACE
  labels:
    name: jenkins
spec:
  serviceName: jenkins
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      name: jenkins
  template:
    metadata:
      name: jenkins
      labels:
        name: jenkins
    spec:
      serviceAccountName: jenkins-service-account
      terminationGracePeriodSeconds: 10
      containers:
        - name: jenkins
          image: ACCOUNT.dkr.ecr.us-east-1.amazonaws.com/alpha/jenkins:IMAGEVERSION
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: jenkins-home
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 6Gi
